--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    background-image: url("/img/fundo-eletrical\ 1.png");
+    background-image: url("/img/fundoeletrical.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
