--- a/css/styles.css
+++ b/css/styles.css
@@ -111,10 +111,9 @@ body{
     width: 250px;
     height: 50px;
     border-radius: 10px;
-    background-color: var(--color-botao1) ;
+    background: var(--color-primary) ;
     font-size: 24px;    
     border: var(--color-botao1);   
-    cursor: pointer;   
-
-
+    cursor: pointer; 
+    color: var(--color-secundary);
 }
